[package]
name = "torrent-rs"
version = "0.1.0"
authors = ["zhangguyu6 <zhangguyu6@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
smol = "1.2.5"
sha-1 = "0.9.4"
data-encoding = "2.3.2"
url = "2.2.1"
hex = "0.4.3"
lazy_static = "1.4.0"
async-oneshot = "0.5.0"

[dev-dependencies]
tempfile = "3.2.0"
