[package]
name = "torrent-rs"
version = "0.1.0"
authors = ["zhangguyu6 <zhangguyu6@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2.3"
thiserror = "1.0"
async-std = { version = "1.10", features = ["unstable"] }
sha-1 = "0.9"
data-encoding = "2.3"
url = "2.2"
hex = "0.4"
log = "*"
rand = "0.8"
bytes = "1.1.0"
bitvec = "0.22.3"

[dev-dependencies]
tempfile = "3.2"
env_logger = "*"
